// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card default 1`] = `
<div
  className="css-1dauq5a"
  data-cy="card"
>
  <div
    className="css-ysit7j"
  >
    Example Content
  </div>
</div>
`;

exports[`Card with aspectRatio set 1`] = `
<div
  className="css-1jnm1at"
  data-cy="card"
>
  <div
    className="css-ysit7j"
  >
    Example Content
  </div>
</div>
`;

exports[`Card with paddingSize set 1`] = `
<div
  className="css-1dauq5a"
  data-cy="card"
>
  <div
    className="css-sriq2i"
  >
    Example Content
  </div>
</div>
`;
